[project]
name = "bikeride"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.1.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "polars[connectorx,pyarrow]>=1.40.1",
    "python-multipart>=0.0.26",
    "uvicorn>=0.45.0",
]
