[project]
name = "bikeride"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.1.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "polars[connectorx,pyarrow]>=1.40.1",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.26",
    "uvicorn>=0.45.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]


[tool.ruff]


[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "S", "DTZ", "I"]
ignore = []